# Tj6Z6Xk7ZBY

./: .artifacts  .bumpversion.cfg  .cdsrc.json  .coderabbit.yml  .cspell.json  .env.docker  .lintstagedrc.json  .spi.yml  02_create_gcp_bucket.md  02_create_gcp_bucket_en.md  AGENTS.md  CLAUDE.md  Csharp_Ola.md  DEVELOPMENT.md  DataScience-Results-Analysis.ipynb  Directory.Build.targets  EduConnect.docx  FINAL (PPT)SECURING CLOUD HYPERVISORS.pptx  Final_version_2.1.ipynb  GAN_Experiential_Learning_Tasks.ipynb  GUIDE.md  Industry overview of Data Management and Data Governance.doc  IoT_README.markdown  Project.docx  Quickstart.md  SUMMARY.md  TSC.md  a.html  chefautomation.md  commit.go  dataEntry.sql  deploy_freqbot_api  ecr.py  education.sln  go.sum  gradle.properties  index-3.0.html  index.py  pyproject.toml  recommended-books.md  (+4 more)
.cargo/: config.toml
.github/workflows/: azure-static-web-apps-white-cliff-0e42aad10.yml  ci-plus.yml  microservice-ui.yaml
AWS Cloud Services Basics – EC2, S3 & CloudWatch/: Readme.md
Certificate and Badge/: readme.md
Installation & User Guide/: CUBE OS Installation on Ugreen NAS (DXP2800 or other X86 models).md
Main/: app.py
NoteCraft_backend/: Dockerfile.web
StressScript/: 1VM.sh
blue-green/simple/: blue-green.yml
content/charts/growth/knowledge/: All-Language.md
docs/: authentication-and-authorization.md
lab1/: start
src/Code/: admin.java
